--- a/lab_2/deployment.yaml
+++ b/lab_2/deployment.yaml
@@ -5,8 +5,6 @@ metadata:
   labels:
     labs: lab2
 spec:
-  REACT_APP_USERNAME: Mikhail Kudryashov
-  REACT_APP_COMPANY_NAME: ITMO
   replicas: 2
   selector:
     matchLabels:
@@ -18,9 +16,14 @@ spec:
     spec:
       containers:
       - name: itdt
-        image: ifilyaninitmo/itdt-contained-frontend
+        image: ifilyaninitmo/itdt-contained-frontend:master
         ports:
         - containerPort: 3000
+        env:
+        - name: REACT_APP_USERNAME
+          value: "Mikhail Kudryashov"
+        - name: REACT_APP_COMPANY_NAME
+          value: "ITMO"
 
 ---
 apiVersion: v1
@@ -33,3 +36,4 @@ spec:
     labs: lab2
   ports:
     - port: 3000
+
