--- a/lab_3/ConfigMap.yaml
+++ b/lab_3/ConfigMap.yaml
@@ -3,5 +3,5 @@ kind: ConfigMap
 metadata:
   name: lab-vars
 data:
-  REACT_APP_USERNAME: ""Mikhail Kudryashov
+  REACT_APP_USERNAME: "Mikhail Kudryashov"
   REACT_APP_COMPANY_NAME: "ITMO"
