--- a/lab_3/ReplicaSet.yaml
+++ b/lab_3/ReplicaSet.yaml
@@ -17,3 +17,8 @@ spec:
       containers:
       - name: itdt
         image: ifilyaninitmo/itdt-contained-frontend:master
+        ports:
+        - containerPort: 3000
+        envFrom:
+        - configMapRef:
+            name: lab-vars
